add more scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "scripts": {
     "dev": "netlify dev --filter client",
-    "build": "netlify build --filter client"
+    "build": "netlify build --filter client",
+    "deploy-preview": "netlify deploy --filter client --alias=dev",
+    "deploy-prod": "netlify deploy --filter client --prod"
   },
   "author": "",
   "license": "ISC",
