--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "netlify dev --filter client",
     "client": "cd client && npm run dev",
-    "build": "netlify build --filter client"
+    "build": "netlify build --filter client",
+    "test": "vitest"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "@types/node": "^20.8.9",
     "netlify-cli": "^16.9.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^1.2.2"
   }
 }
